...
            android:paddingLeft="20dp"
            android:text="Hello,"
            android:textColor="#AA7676"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/current_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="there!"
            android:textColor="#CDDC39"
            android:textSize="20dp"
...
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" />

            <TextView
...
